--- a/Data Visualisation 2/css/styles.css
+++ b/Data Visualisation 2/css/styles.css
@@ -7,7 +7,7 @@ body *{
 h1 {
   font-weight: 900;
   color: #ffffff; /* Change font color to white */
-  font-family: 'Cinzel', serif; /* Set font family to Times New Roman */
+  font-family: 'Pacifico', cursive; /* Set font family to Times New Roman */
   font-size: 65px; /* Set font size to 65 pixels */
   margin-top: 10px; /* Add some top margin for spacing */
   text-align: center; /* Center align the text */
